update Alpine base image to use `oci` as the user/group name

--- a/base-images/alpine/Dockerfile
+++ b/base-images/alpine/Dockerfile
@@ -1,5 +1,5 @@
 ARG ALPINE_TAG="3.13"
 FROM alpine:${ALPINE_TAG}
 
-RUN addgroup --gid 1001 container \
- && adduser --uid 1001 --shell /bin/bash -G container -S container
+RUN addgroup --gid 1001 oci \
+ && adduser --uid 1001 --shell /bin/bash -G oci -S oci
